<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoapp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/recordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#EDC6D4"
        android:fontFamily="casual"
        android:padding="8dp"
        android:text="@string/record"
        android:textColor="#795548"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/levelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#EDC6D4"
        android:fontFamily="casual"
        android:padding="8dp"
        android:text="@string/nivel"
        android:textColor="#3F51B5"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#EDC6D4"
        android:fontFamily="casual"
        android:padding="8dp"
        android:text="@string/puntuacion"
        android:textColor="#FF5722"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/messageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text=" "
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:visibility="gone" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/cardContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp"></LinearLayout>
    </HorizontalScrollView>

</LinearLayout>
